[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Bomb.png" type="Texture" id=1]
[ext_resource path="res://Assets/bombExplosion.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Bomb.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 20, 26 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 20, 26 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 20, 26 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 26 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 26 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 26 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 26.1725

[node name="Bomb" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="BombExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
